--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="ERROR_LONG_PASSWORD">La contraseña debe tener al menos 8 carácteres.</string>
     <string name="ERROR_EMAIL_PATTERN">Introduce un email correcto.</string>
     <string name="ERROR_EMAIL_REGISTERED">Este correo ya está en uso por otra cuenta.</string>
+    <string name="logout_user">Cerrar sesión</string>
 </resources>
