--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,11 @@
     <string name="ERROR_EMAIL_PATTERN">Introduce un email correcto.</string>
     <string name="ERROR_EMAIL_REGISTERED">Este correo ya está en uso por otra cuenta.</string>
     <string name="logout_user">Cerrar sesión</string>
+    <string name="change_photo_profile">Cambiar foto del perfil</string>
+    <string name="nick_shop">Nick de tienda</string>
+    <string name="province">Provincia</string>
+    <string name="description">Descripción</string>
+    <string name="phone">Teléfono</string>
+    <string name="address">Dirección</string>
+    <string name="save">Listo</string>
 </resources>
