Arreglado la gestión de la UID y añadido la localización de lat y long al actualizar o registrar usuario.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,6 @@
     <string name="province">Provincia</string>
     <string name="description">Descripción</string>
     <string name="phone">Teléfono</string>
-    <string name="address">Dirección</string>
+    <string name="address">Calle y C.P</string>
     <string name="save">Listo</string>
 </resources>
