--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="phone">Teléfono</string>
     <string name="address">Calle y C.P</string>
     <string name="save">Listo</string>
+    <string name="editar_perfil">Editar Perfil</string>
 </resources>
